@@ -1,5 +1,8 @@
 New entries should be added at the top
 
+2004-07-28 Added image.imread with support for loading png into
+           numerix arrays
+
 2004-07-28 Added key modifiers to events - implemented dynamic updates
            and rubber banding for interactive pan/zoom - JDH
 
